# ok-serializer

./: .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classokser_1_1bundle.html  classokser_1_1in_1_1range.html  classokser_1_1internal_1_1type.html  classokser_1_1out_1_1cbuf.html  classokser_1_1out_1_1cstring.html  classokser_1_1out_1_1fixed__container.html  classokser_1_1out_1_1stdstring.html  concepts.html  concepts_8h.html  context_8h.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  dir_f2fc27dfdec3f4ebb6ea800dcf305286.html  errors_8h.html  files.html  impl__outputs_8h.html  impl__types_8h.html  impl__utils_8h.html  index.html  io_8h.html  modules.html  namespaceokser.html  namespaceokser_1_1in.html  namespaceokser_1_1internal.html  namespaceokser_1_1out.html  namespaces.html  ok-serializer_8hpp.html  pages.html  reflection_8h.html  searchdata-v1.js  searchdata-v2.js  (+19 more)
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  reflection.cmake  variables.cmake
docker/: Dockerfile
docs/: Doxyfile.in  conf.py.in
docs/pages/: 010_basic_usage.md  020_simple_types.md  about.dox
example/: CMakeLists.txt  empty_example.cpp  mirror.hpp  reflection_example.cpp
include/ok-serializer/: compound_types.h  concepts.h  context.h  errors.h  impl_context.h  impl_helpers.h  impl_outputs.h  impl_types.h  impl_utils.h  io.h  ok-serializer.hpp  reflection.h  types_compound.h  types_json.h  types_simple.h  utils_early.h  utils_late.h
test/: CMakeLists.txt
test/source/: benchmarks.cpp  deserializer_test.cpp  idempotence_test.cpp  main.cpp  ok-serializer_test.cpp  optimizer_test.cpp  outputs_test.cpp  reflection_test.cpp  serializer_test.cpp  static_test.cpp
